# mcp-zen-of-languages

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .sourcery.yaml  .zen-of-languages.ignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PHILOSOPHY.md  README.md  mkdocs.yml  pyproject.toml  zen-config.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: analyzer.agent.md  detector-dev.agent.md  memo.agent.md  onboarding.agent.md  plan.agent.md  prompt-generator.agent.md  tdd-coverage-guardian.agent.md  test-driven.agent.md  testing-dogmas-implementer.agent.md
.github/instructions/: architecture.instructions.md  fetch_webpage.md  get_project_setup_info.md  mandatory-python-312.instructions.md  precommit-verification.instructions.md
.github/workflows/: cicd.yml
.serena/: project.yml
.serena/memories/: advanced-fastmcp-features-issue.md
docs/: _index.md  changelog.md  config.md  index.md  philosophy.md  tags.md
docs/api/: .meta.yml  _index.md  analyzers.md  config.md  detectors.md  entrypoints.md  index.md  models.md  pipeline.md  rules.md  server.md
docs/assets/: ai-image-prompts.yaml
docs/contributing/: .meta.yml  _index.md  adding-detector.md  adding-language.md  architecture.md  content-quality.md  development.md  index.md  material-examples.md  mkdocs-material-modernization.md  rendering-style-guide.md  zensical-migration.md
docs/getting-started/: .meta.yml  _index.md  index.md  installation.md  mcp-integration.md  philosophy.md  quickstart.md  security.md
docs/includes/: .abbreviations.md
docs/javascripts/: extra.js  mathjax.js
docs/overrides/: 404.html  home.html  main.html
docs/stylesheets/: extra.css  mkdocstrings.css
docs/user-guide/: .meta.yml  _index.md  cli-reference.md  configuration.md  examples.md  index.md  mcp-tools-reference.md  project-analysis.md  prompt-generation.md  understanding-violations.md
memories/: zen-project-state.md
scripts/: branch.py  build_mcpb.py  bump_version.py  check_content_quality.py  check_docs_assets.py  check_docs_contrast.py  check_docs_links.py  check_language_structure.py  check_orphan_docs.py  check_sphinx_roles.py  docs_contrast_config.json  export_svg_assets.py  generate_cli_docs.py  generate_cli_output_example.py  generate_config_docs.py  generate_dogma_mapping.py  generate_implementation_counts.py  generate_language_docs.py  generate_mcp_tools_docs.py  rrt-wrapper.py  validate_dogma_consistency.py  warn_missing_rule_coverage.py
scripts/templates/: language_page.md.j2
src/mcp_zen_of_languages/: __init__.py  __main__.py  cli.py  config.py  lifespan.py  middleware.py  models.py  orchestration.py  perspectives.py  server.py  storage.py  telemetry.py
tests/: test_branch_script.py  test_branch_script_integration.py  test_bump_version_script.py  test_changelog_generation.py  test_cli_output_example.py  test_content_quality.py  test_docs_freshness.py  test_docstring_structure.py  test_implementation_counts.py  test_orchestration.py  test_perspectives.py
tests/analyzers/: test_analyzer_base.py  test_analyzer_base_more.py  test_analyzer_factory.py  test_analyzer_helpers.py  test_analyzers.py  test_data_format_parsers.py  test_dependency_analysis.py  test_entry_point_preservation.py  test_external_analysis.py  test_go_analyzer.py  test_language_analyzers.py  test_language_analyzers_more.py  test_rust_analyzer.py  test_sql_analyzer.py  test_universal_detector.py
tests/cli/: test_cli.py  test_cli_aggregation.py  test_cli_exports.py  test_cli_helpers.py  test_cli_init_wizard.py  test_cli_more.py  test_cli_output_coverage.py  test_cli_prompts.py  test_cli_report_rendering.py
tests/config/: test_config.py  test_config_coverage.py  test_config_more.py
tests/coverage/: test_additional_coverage.py  test_base_and_rules_coverage.py  test_coverage_boost.py  test_coverage_more.py  test_language_structure_script.py  test_misc_coverage.py  test_models_coverage.py
tests/detectors/: test_additional_detectors.py  test_ansible_detectors.py  test_detectors.py  test_docker_compose_detectors.py  test_dockerfile_detectors.py  test_explicit_detectors_additional.py  test_github_actions_detector.py  test_gitlab_ci_detectors.py  test_go_detectors.py  test_json_detectors.py  test_language_detector_coverage.py  test_language_detectors_more.py  test_latex_detectors.py  test_markdown_detectors.py  test_other_detectors_coverage.py  test_python_detectors_coverage.py  test_python_detectors_more.py  test_python_detectors_more2.py  test_python_grey_commit_detector.py  test_rule_pattern_detector.py  test_rust_detectors.py  test_shared_keyword_detector.py  test_sql_detectors.py  test_svg_detectors.py  test_terraform_detectors.py  test_typescript_detectors.py  test_universal_mapping.py
tests/dogmas/: test_dogma_analysis.py
tests/e2e/: test_ansible_e2e.py  test_markdown_mdx_e2e.py  test_terraform_e2e.py  test_visual_regression.py  visual_utils.py
tests/entrypoint/: test_main_entrypoint.py  test_main_entrypoint_more.py  test_pyproject_scripts.py  test_server_entrypoint.py
tests/fixtures/: clean_file.py  many_violations.py  medium_violations.py
tests/framework/: __init__.py  test_framework_bridge.py  test_framework_mapping_imports.py  test_gotest_analyzer.py  test_jest_analyzer.py  test_pytest_analyzer.py  test_rspec_analyzer.py
tests/frameworks/: test_framework_contracts.py  test_framework_family_mappings.py  test_frontend_framework_detectors.py  test_python_framework_detectors.py
tests/patterns/: test_detectors.py
tests/registry/: test_content_language_family_adoption.py  test_detector_config_integration.py  test_language_family_adoption.py  test_language_family_adoption_infra_wave.py  test_language_family_adoption_shell_wave.py  test_language_family_adoption_systems_wave.py  test_mapping_models.py  test_mapping_order_normalization.py  test_pipeline_registry.py  test_placeholder_rules.py  test_registry_bootstrap_coverage.py  test_registry_coverage.py  test_registry_more.py  test_registry_pipeline_merge.py  test_universal_dogmas.py
(+410 files in other folders)
