[project]
name = "mcp-zen-of-languages"
version = "0.3.0"
description = "Multi-language architectural and idiomatic code analysis via CLI and MCP server."
readme = "README.md"
authors = [{ name = "Anselm Hahn", email = "Anselm.Hahn@gmail.com" }]
requires-python = ">=3.12"
keywords = [
    "mcp",
    "code-analysis",
    "code-quality",
    "linting",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.14.4",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pygments>=2.19.2",
    "radon>=6.0.1",
    "typer>=0.12.0",
    "tree-sitter>=0.25.2",
    "sqlglot==28.10.1",
]

[project.urls]
Homepage = "https://github.com/Anselmoo/mcp-zen-of-languages"
Documentation = "https://anselmoo.github.io/mcp-zen-of-languages/"
Issues = "https://github.com/Anselmoo/mcp-zen-of-languages/issues"
Source = "https://github.com/Anselmoo/mcp-zen-of-languages"

[project.scripts]
zen = "mcp_zen_of_languages.cli:main"
zen-mcp-server = "mcp_zen_of_languages.__main__:main"

[project.optional-dependencies]
tui = ["pyfiglet>=1.0.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
]
dev = [
    "cairosvg>=2.8.2",
    "jinja2>=3.1.6",
    "poethepoet>=0.33.1",
    "playwright>=1.54.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "interrogate[png]>=1.7.0",
    "ruff>=0.14.14",
    "ty>=0.0.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    # Keep these permanently suppressed because they conflict with the Ruff formatter.
    "COM812",  # missing-trailing-comma (formatter handles)
    "E501",    # line-too-long (formatter handles)
    "PLC0415", #  top-level of a file
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "INP001", "SLF001", "ARG", "ANN"]
"scripts/**/*.py" = ["D", "T201", "INP001", "S", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyflakes]
allowed-unused-imports = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = false
fail-under = 90
verbose = 1
exclude = ["tests", "scripts"]

[tool.ty]
environment.python-version = "3.12"

[tool.ty.rules]
# Baseline suppressions — fix incrementally
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
unsupported-base = "ignore"
unknown-argument = "ignore"
not-subscriptable = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"

[tool.poe.tasks]
check_docs_assets = "python scripts/check_docs_assets.py"
check_content_quality = "python scripts/check_content_quality.py"
check_docs_contrast = "python scripts/check_docs_contrast.py --build --mode check"
check_docs_links = "python scripts/check_docs_links.py"
check_implementation_counts = "python scripts/generate_implementation_counts.py --check"
check_language_structure = "python scripts/check_language_structure.py"
check_orphan_docs = "python scripts/check_orphan_docs.py"
check_sphinx_roles = "python scripts/check_sphinx_roles.py"
generate_config_docs = "python scripts/generate_config_docs.py"
generate_implementation_counts = "python scripts/generate_implementation_counts.py"
generate_language_docs = "python scripts/generate_language_docs.py"
generate_cli_docs = "python scripts/generate_cli_docs.py"
generate_mcp_tools_docs = "python scripts/generate_mcp_tools_docs.py"
bump_version = "python scripts/bump_version.py"
bump_patch = "python scripts/bump_version.py patch"
bump_minor = "python scripts/bump_version.py minor"
bump_major = "python scripts/bump_version.py major"
bump_no_changelog = "python scripts/bump_version.py patch --no-changelog"
changelog_preview = "python scripts/bump_version.py patch --dry-run"
branch_new = "python scripts/branch.py new"
branch_feat = "python scripts/branch.py new feat"
branch_fix = "python scripts/branch.py new fix"
branch_chore = "python scripts/branch.py new chore"
branch_docs = "python scripts/branch.py new docs"
branch_refactor = "python scripts/branch.py new refactor"
branch_test = "python scripts/branch.py new test"
branch_ci = "python scripts/branch.py new ci"
branch_perf = "python scripts/branch.py new perf"
branch_style = "python scripts/branch.py new style"
branch_build = "python scripts/branch.py new build"
branch_rescue = "python scripts/branch.py rescue"
warn_missing_rule_coverage = "python scripts/warn_missing_rule_coverage.py"
export_svg_assets = "python scripts/export_svg_assets.py"

[tool.pytest.ini_options]
addopts = "--cov=src/mcp_zen_of_languages --cov-report=term-missing --cov-fail-under=95"
