[project]
name = "mcp-zen-of-languages"
version = "0.5.1"
description = "Multi-language architectural and idiomatic code analysis via CLI and MCP server."
readme = "README.md"
authors = [{ name = "Anselm Hahn", email = "Anselm.Hahn@gmail.com" }]
requires-python = ">=3.12"
keywords = [
    "mcp",
    "code-analysis",
    "code-quality",
    "linting",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp[tasks]>=3.0.2",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pygments>=2.19.2",
    "radon>=6.0.1",
    "typer[all]>=0.12.0",
    "tree-sitter>=0.25.2",
    "sqlglot==29.0.1",
]

[project.urls]
Homepage = "https://github.com/Anselmoo/mcp-zen-of-languages"
Documentation = "https://anselmoo.github.io/mcp-zen-of-languages/"
Issues = "https://github.com/Anselmoo/mcp-zen-of-languages/issues"
Source = "https://github.com/Anselmoo/mcp-zen-of-languages"

[project.scripts]
zen = "mcp_zen_of_languages.cli:main"
zen-mcp-server = "mcp_zen_of_languages.__main__:main"

[project.optional-dependencies]
tui = ["pyfiglet>=1.0.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "zensical>=0.0.23",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
]
dev = [
    "cairosvg>=2.8.2",
    "jinja2>=3.1.6",
    "poethepoet>=0.33.1",
    "playwright>=1.54.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "interrogate[png]>=1.7.0",
    "ruff>=0.14.14",
    "ty>=0.0.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    # Keep these permanently suppressed because they conflict with the Ruff formatter.
    "COM812",  # missing-trailing-comma (formatter handles)
    "E501",    # line-too-long (formatter handles)
    "PLC0415", #  top-level of a file
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "INP001", "SLF001", "ARG", "ANN", "PLR2004"]
"scripts/**/*.py" = ["D", "T201", "INP001", "S", "ANN"]

[tool.ruff.lint.isort]
# Import ordering applied to src/, scripts/, and tests/ via ruff check hook.
# Enforces: standard library → third-party → first-party (mcp_zen_of_languages)
# Each category on single lines; blank line between sections.
known-first-party = ["mcp_zen_of_languages"]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
case-sensitive = true
combine-as-imports = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyflakes]
allowed-unused-imports = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = false
fail-under = 90
verbose = 1
exclude = ["tests", "scripts"]

[tool.ty]
environment.python-version = "3.12"

[tool.ty.rules]
# Baseline suppressions — fix incrementally
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
unsupported-base = "ignore"
unknown-argument = "ignore"
not-subscriptable = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"

[tool.poe.tasks]
check_docs_assets = { cmd = "python scripts/check_docs_assets.py", help = "Validate docs asset, CSS, JS, and SVG quality gates" }
check_content_quality = { cmd = "python scripts/check_content_quality.py", help = "Audit Markdown content quality across docs and README" }
check_docs_contrast = { cmd = "python scripts/check_docs_contrast.py --build --mode check", help = "Build docs and verify WCAG contrast compliance" }
check_docs_links = { cmd = "python scripts/check_docs_links.py", help = "Check documentation hyperlinks and anchor coverage" }
check_implementation_counts = { cmd = "python scripts/generate_implementation_counts.py --check", help = "Verify generated implementation counts are up to date" }
check_language_structure = { cmd = "python scripts/check_language_structure.py", help = "Validate language folder layout and analyzer structure" }
check_orphan_docs = { cmd = "python scripts/check_orphan_docs.py", help = "Detect documentation pages missing from the navigation" }
check_sphinx_roles = { cmd = "python scripts/check_sphinx_roles.py", help = "Find leaked or invalid Sphinx role markup in docs" }
generate_config_docs = { cmd = "python scripts/generate_config_docs.py", help = "Regenerate the configuration reference from code" }
generate_implementation_counts = { cmd = "python scripts/generate_implementation_counts.py", help = "Regenerate implementation count snapshots" }
generate_language_docs = { cmd = "python scripts/generate_language_docs.py", help = "Regenerate per-language documentation pages" }
generate_cli_docs = { cmd = "python scripts/generate_cli_docs.py", help = "Regenerate the CLI reference documentation" }
generate_mcp_tools_docs = { cmd = "python scripts/generate_mcp_tools_docs.py", help = "Regenerate the MCP tools reference documentation" }
warn_missing_rule_coverage = { cmd = "python scripts/warn_missing_rule_coverage.py", help = "Report rule-to-detector coverage gaps" }
export_svg_assets = { cmd = "python scripts/export_svg_assets.py", help = "Export generated SVG assets used by the docs site" }
run_server = { cmd = "zensical serve", help = "Start the local documentation development server" }
build_docs = { cmd = "zensical build", help = "Build the documentation site" }
bump_version = { cmd = "python scripts/bump_version.py", help = "Bump the project version and update release artifacts" }
bump_patch = { cmd = "python scripts/bump_version.py patch", help = "Create a patch release version bump" }
bump_minor = { cmd = "python scripts/bump_version.py minor", help = "Create a minor release version bump" }
bump_major = { cmd = "python scripts/bump_version.py major", help = "Create a major release version bump" }
bump_no_changelog = { cmd = "python scripts/bump_version.py patch --no-changelog", help = "Create a patch version bump without editing the changelog" }
changelog_preview = { cmd = "python scripts/bump_version.py patch --dry-run", help = "Preview the next patch changelog and version bump without writing files" }
branch_new = { cmd = "python scripts/branch.py new", help = "Create a new branch using the project naming workflow" }
branch_feat = { cmd = "python scripts/branch.py new feat", help = "Create a feature branch" }
branch_fix = { cmd = "python scripts/branch.py new fix", help = "Create a bugfix branch" }
branch_chore = { cmd = "python scripts/branch.py new chore", help = "Create a chore branch" }
branch_docs = { cmd = "python scripts/branch.py new docs", help = "Create a documentation branch" }
branch_refactor = { cmd = "python scripts/branch.py new refactor", help = "Create a refactor branch" }
branch_test = { cmd = "python scripts/branch.py new test", help = "Create a testing-focused branch" }
branch_ci = { cmd = "python scripts/branch.py new ci", help = "Create a CI branch" }
branch_perf = { cmd = "python scripts/branch.py new perf", help = "Create a performance branch" }
branch_style = { cmd = "python scripts/branch.py new style", help = "Create a style-only branch" }
branch_build = { cmd = "python scripts/branch.py new build", help = "Create a build-system branch" }
branch_rescue = { cmd = "python scripts/branch.py rescue", help = "Recover or realign the current branch using the rescue workflow" }


[tool.pytest.ini_options]
addopts = "--cov=src/mcp_zen_of_languages --cov-report=term-missing --cov-fail-under=95"
